Created the slides for testimonials section

--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,10 @@ p {
     min-width: 20px;
     margin: 40px auto;
 }
+
+
+ @media (max-width: 759px){
+    .two, .three {
+        display: none;
+    }
+} 
